<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/planifications">

    <fragment
        android:id="@+id/grocery"
        android:name="com.emberestudio.project.ui.grocery.ui.GroceryShopListFragment"
        android:label="@string/grocery_list"
        tools:layout="@layout/fragment_grocery_list">
    </fragment>

    <fragment
        android:id="@+id/meals"
        android:label="@string/meals_list"
        android:name="com.emberestudio.project.ui.meals.ui.MealsFragment"
        tools:layout="@layout/fragment_meals_list">
        <action
            android:id="@+id/action_meals_to_meal_detail"
            app:destination="@id/meal_detail" />
    </fragment>

    <fragment
        android:id="@+id/planifications"
        android:name="com.emberestudio.project.ui.planifications.ui.PlanificationsFragment"
        android:label="@string/weekly_plan"
        tools:layout="@layout/fragment_planifications_list">

        <action
            android:id="@+id/action_planifications_to_plan"
            app:destination="@id/plan" />
    </fragment>

    <fragment
        android:id="@+id/plan"
        android:name="com.emberestudio.project.ui.planner.ui.PlanFragment"
        android:label="@string/plan"
        tools:layout="@layout/fragment_meal_planner"
        >
        <argument
            android:name="planId"
            app:argType="string"/>
        <action
            android:id="@+id/action_plan_to_meal_detail"
            app:destination="@id/meal_detail" />
    </fragment>

    <fragment
        android:id="@+id/meal_detail"
        android:name="com.emberestudio.project.ui.mealdetail.ui.MealDetailFragment"
        android:label="@string/meal_detail"
        tools:layout="@layout/fragment_meal_detail">
        <argument
            android:name="meal"
            app:argType="string"
            />
    </fragment>

</navigation>