<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/grocery"
        android:title="@string/grocery_list"
        android:checked="false"
        android:orderInCategory="1"
        android:icon="@drawable/ic_local_grocery_store_black_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/planner"
        android:title="@string/weekly_plan"
        android:checked="true"
        android:orderInCategory="2"

        android:icon="@drawable/ic_calendar_today_black_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/meals"
        android:title="@string/meals_list"
        android:icon="@drawable/ic_restaurant_black_24dp"
        android:orderInCategory="3"
        android:checked="false"
        app:showAsAction="ifRoom"
        />
</menu>