<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            android:layout_marginBottom="8dp"
            >

            <ImageView
                android:id="@+id/collaborators_close_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:src="@drawable/ic_close_black_24dp"
                android:tint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/collaborators_add_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/collaborators_dialog_title"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/collaborators_close_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_save_collaborators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/save"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_collaborators"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:id="@+id/iv_collaborator_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_person_add_black_24dp" />

                    <EditText
                        android:id="@+id/et_collaborator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:hint="@string/add_a_collaborator_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:layout_toEndOf="@+id/iv_collaborator_icon"
                        android:backgroundTint="@android:color/transparent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                         />
                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>